rtc fixes
